--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ license = "MIT"
 repository = "https://github.com/adam-mcdaniel/comments"
 
 [dependencies]
-comment-strip = "0.1.3"
+comment-strip = { path = "comment-strip" }
